@@ -7,6 +7,8 @@ Changes to Version 2.3-0
   o Added delta-method dialog.
   
   o Added view data dialog, supporting viewing a subset of the active data set, and sort data set dialog (suggestions of Sung-il Cho).
+  
+  o Added connect option to plot means dialog (suggestion of Graham Smith).
 
 
 Changes to Version 2.2-4
